--- a/main/correlation.ipynb
+++ b/main/correlation.ipynb
@@ -48,86 +48,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "room    time_stayed_mins\n",
-       "101.0   2                    8\n",
-       "        21                   8\n",
-       "        24                   0\n",
-       "102.0   0                    3\n",
-       "        18                   4\n",
-       "103.0   7                    3\n",
-       "105.0   23                   3\n",
-       "        24                   9\n",
-       "106.0   8                    6\n",
-       "107.0   22                   0\n",
-       "201.0   17                  10\n",
-       "202.0   15                   8\n",
-       "203.0   24                   5\n",
-       "204.0   28                   6\n",
-       "205.0   9                    0\n",
-       "206.0   17                   4\n",
-       "        24                   6\n",
-       "207.0   27                   3\n",
-       "301.0   13                  10\n",
-       "        19                   6\n",
-       "302.0   8                    8\n",
-       "        14                   7\n",
-       "        19                   2\n",
-       "        24                   0\n",
-       "303.0   5                    8\n",
-       "304.0   4                    8\n",
-       "        12                   5\n",
-       "305.0   12                   6\n",
-       "        17                  10\n",
-       "401.0   25                   4\n",
-       "                            ..\n",
-       "803.0   19                   7\n",
-       "804.0   7                   10\n",
-       "        20                   6\n",
-       "805.0   23                   2\n",
-       "        24                   1\n",
-       "806.0   16                   9\n",
-       "807.0   8                    8\n",
-       "        14                   7\n",
-       "        21                   2\n",
-       "901.0   0                   10\n",
-       "        17                   1\n",
-       "902.0   6                    7\n",
-       "        12                   3\n",
-       "        14                   4\n",
-       "903.0   5                    1\n",
-       "        8                   10\n",
-       "        30                   3\n",
-       "904.0   21                   8\n",
-       "        27                   0\n",
-       "905.0   20                   7\n",
-       "907.0   5                    7\n",
-       "1001.0  9                    7\n",
-       "1002.0  27                   1\n",
-       "1003.0  3                    1\n",
-       "        10                   4\n",
-       "        27                   1\n",
-       "1004.0  13                   8\n",
-       "        20                   0\n",
-       "1006.0  3                    2\n",
-       "1007.0  27                   4\n",
-       "Name: no_of_people, Length: 104, dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-a62f09f0962a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf_morning\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'from_time'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'00:00:00'\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdf_people_room\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf_morning\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'room'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'time_stayed_mins'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'no_of_people'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
     "df_morning = df[df['from_time'] == '00:00:00' ]\n",
-    "df_people_room = df_morning.groupby(['room', 'time_stayed_mins']).sum()['no_of_people']\n",
-    "df_people_room"
+    "df_people_room = df_morning.groupby(['room', 'time_stayed_mins']).sum()['no_of_people']"
    ]
   }
  ],
