Mean power device - almost complete. Yet to implement the final dict

--- a/main/mean_power_devices.ipynb
+++ b/main/mean_power_devices.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "Name: power, Length: 336, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,6 +104,408 @@
    "source": [
     "df_devices = df.groupby(['from_time', 'device', 'type']).mean()['power']\n",
     "df_devices.reset_index()\n",
+    "df_devices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>power</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>from_time</th>\n",
+       "      <th>device</th>\n",
+       "      <th>type</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"14\" valign=\"top\">00:00:00</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">AC</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>1362.214286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>3470.705882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Computer</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>399.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>412.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Heater</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>2258.375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>2274.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Lights</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>1535.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>3475.473684</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Microwave</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>1420.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>1489.933333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Refridgerator</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>192.388889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>195.076923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Television</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>243.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>261.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"14\" valign=\"top\">01:00:00</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">AC</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>1493.071429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>3724.352941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Computer</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>416.461538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>413.555556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Heater</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>2143.277778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>2286.461538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Lights</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>1447.950000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>3092.454545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Microwave</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>1536.857143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>1429.294118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Refridgerator</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>207.416667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>234.684211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Television</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>251.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>249.904762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">02:00:00</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">AC</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>1435.846154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>3413.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">21:00:00</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Television</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>254.727273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>248.350000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"14\" valign=\"top\">22:00:00</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">AC</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>1411.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>3791.153846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Computer</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>404.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>432.181818</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Heater</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>2280.642857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>2243.470588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Lights</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>1364.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>3389.562500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Microwave</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>1436.052632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>1463.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Refridgerator</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>181.090909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>190.650000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Television</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>241.733333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>258.312500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"14\" valign=\"top\">23:00:00</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">AC</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>1503.764706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>3403.857143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Computer</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>393.071429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>404.764706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Heater</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>2306.523810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>2382.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Lights</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>1466.352941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>3654.714286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Microwave</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>1584.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>1612.062500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Refridgerator</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>188.315789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>210.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Television</th>\n",
+       "      <th>indoor</th>\n",
+       "      <td>242.785714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>outdoor</th>\n",
+       "      <td>249.764706</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>336 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       power\n",
+       "from_time device        type                \n",
+       "00:00:00  AC            indoor   1362.214286\n",
+       "                        outdoor  3470.705882\n",
+       "          Computer      indoor    399.000000\n",
+       "                        outdoor   412.400000\n",
+       "          Heater        indoor   2258.375000\n",
+       "                        outdoor  2274.666667\n",
+       "          Lights        indoor   1535.000000\n",
+       "                        outdoor  3475.473684\n",
+       "          Microwave     indoor   1420.000000\n",
+       "                        outdoor  1489.933333\n",
+       "          Refridgerator indoor    192.388889\n",
+       "                        outdoor   195.076923\n",
+       "          Television    indoor    243.666667\n",
+       "                        outdoor   261.500000\n",
+       "01:00:00  AC            indoor   1493.071429\n",
+       "                        outdoor  3724.352941\n",
+       "          Computer      indoor    416.461538\n",
+       "                        outdoor   413.555556\n",
+       "          Heater        indoor   2143.277778\n",
+       "                        outdoor  2286.461538\n",
+       "          Lights        indoor   1447.950000\n",
+       "                        outdoor  3092.454545\n",
+       "          Microwave     indoor   1536.857143\n",
+       "                        outdoor  1429.294118\n",
+       "          Refridgerator indoor    207.416667\n",
+       "                        outdoor   234.684211\n",
+       "          Television    indoor    251.000000\n",
+       "                        outdoor   249.904762\n",
+       "02:00:00  AC            indoor   1435.846154\n",
+       "                        outdoor  3413.000000\n",
+       "...                                      ...\n",
+       "21:00:00  Television    indoor    254.727273\n",
+       "                        outdoor   248.350000\n",
+       "22:00:00  AC            indoor   1411.444444\n",
+       "                        outdoor  3791.153846\n",
+       "          Computer      indoor    404.400000\n",
+       "                        outdoor   432.181818\n",
+       "          Heater        indoor   2280.642857\n",
+       "                        outdoor  2243.470588\n",
+       "          Lights        indoor   1364.333333\n",
+       "                        outdoor  3389.562500\n",
+       "          Microwave     indoor   1436.052632\n",
+       "                        outdoor  1463.000000\n",
+       "          Refridgerator indoor    181.090909\n",
+       "                        outdoor   190.650000\n",
+       "          Television    indoor    241.733333\n",
+       "                        outdoor   258.312500\n",
+       "23:00:00  AC            indoor   1503.764706\n",
+       "                        outdoor  3403.857143\n",
+       "          Computer      indoor    393.071429\n",
+       "                        outdoor   404.764706\n",
+       "          Heater        indoor   2306.523810\n",
+       "                        outdoor  2382.800000\n",
+       "          Lights        indoor   1466.352941\n",
+       "                        outdoor  3654.714286\n",
+       "          Microwave     indoor   1584.200000\n",
+       "                        outdoor  1612.062500\n",
+       "          Refridgerator indoor    188.315789\n",
+       "                        outdoor   210.500000\n",
+       "          Television    indoor    242.785714\n",
+       "                        outdoor   249.764706\n",
+       "\n",
+       "[336 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "df_devices"
    ]
   }
