--- a/main/mean_power_device.ipynb
+++ b/main/mean_power_device.ipynb
@@ -53,10 +53,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>device</th>\n",
+       "      <th>building</th>\n",
+       "      <th>floor</th>\n",
+       "      <th>room</th>\n",
+       "      <th>type</th>\n",
+       "      <th>power</th>\n",
+       "      <th>date</th>\n",
+       "      <th>from_time</th>\n",
+       "      <th>to_time</th>\n",
+       "      <th>no_of_people</th>\n",
+       "      <th>time_stayed_mins</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AC</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>indoor</td>\n",
+       "      <td>1363</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>04:00:00</td>\n",
+       "      <td>05:00:00</td>\n",
+       "      <td>9</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Computer</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>indoor</td>\n",
+       "      <td>487</td>\n",
+       "      <td>2018-01-27</td>\n",
+       "      <td>08:00:00</td>\n",
+       "      <td>09:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Computer</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>indoor</td>\n",
+       "      <td>464</td>\n",
+       "      <td>2018-01-29</td>\n",
+       "      <td>05:00:00</td>\n",
+       "      <td>06:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Computer</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>indoor</td>\n",
+       "      <td>389</td>\n",
+       "      <td>2018-01-30</td>\n",
+       "      <td>01:00:00</td>\n",
+       "      <td>02:00:00</td>\n",
+       "      <td>8</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Computer</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>indoor</td>\n",
+       "      <td>338</td>\n",
+       "      <td>2018-01-30</td>\n",
+       "      <td>08:00:00</td>\n",
+       "      <td>09:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     device  building  floor   room    type  power        date from_time  \\\n",
+       "0        AC         1      1  101.0  indoor   1363  2018-01-01  04:00:00   \n",
+       "1  Computer         1      1  101.0  indoor    487  2018-01-27  08:00:00   \n",
+       "2  Computer         1      1  101.0  indoor    464  2018-01-29  05:00:00   \n",
+       "3  Computer         1      1  101.0  indoor    389  2018-01-30  01:00:00   \n",
+       "4  Computer         1      1  101.0  indoor    338  2018-01-30  08:00:00   \n",
+       "\n",
+       "    to_time  no_of_people  time_stayed_mins  \n",
+       "0  05:00:00             9                 7  \n",
+       "1  09:00:00             0                17  \n",
+       "2  06:00:00             1                16  \n",
+       "3  02:00:00             8                27  \n",
+       "4  09:00:00             2                 4  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "target_list = []\n",
+    "\n",
+    "for index, row in df.iterrows():\n",
+    "    if row['power'] > dicto[row['from_time']][row['device']][row['type']]:\n",
+    "        target_list.append(0)\n",
+    "    else:\n",
+    "        target_list.append(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['target'] = pd.Series(target_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('../data/home_final.csv')"
+   ]
   }
  ],
  "metadata": {
