Rerun and added comments

--- a/main/mean_power_device.ipynb
+++ b/main/mean_power_device.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,24 +26,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Group by time, device and type and calculate mean on power\n",
     "df_devices = df.groupby(['from_time', 'device', 'type']).mean()['power']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Unstack index and convert to a dictionary\n",
     "dicto = df_devices.unstack(level=1).unstack().to_dict('index')\n",
     "\n",
+    "# Create dictionary for types and devices\n",
     "df_dict = {}\n",
     "df_type = {}\n",
     "\n",
+    "# Update tuple based keys to string based keys\n",
     "for i, j in dicto.items():\n",
     "    for key, value in j.items():\n",
     "        df_type[key[1]] = value\n",
@@ -53,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +185,7 @@
        "4  09:00:00             2                 4  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,10 +196,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a target list based on the mean power level\n",
     "target_list = []\n",
     "\n",
     "for index, row in df.iterrows():\n",
@@ -207,19 +212,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Append target list to the original dataframe\n",
     "df['target'] = pd.Series(target_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Convert dataframe to csv\n",
     "df.to_csv('../data/home_final.csv')"
    ]
   }
