--- a/classification/ann_classification.ipynb
+++ b/classification/ann_classification.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,21 +94,21 @@
     "classifier = Sequential()\n",
     "\n",
     "# Adding the input layer and the first hidden layer\n",
-    "layer_info = Dense(activation='relu', input_dim=11, kernel_initializer='uniform', units=6)\n",
+    "layer_info = Dense(1, activation='relu', kernel_initializer='uniform')\n",
     "classifier.add(layer_info)\n",
     "\n",
     "# Adding second hidden layer\n",
-    "layer_info = Dense(activation='relu', kernel_initializer='uniform', units=6)\n",
+    "layer_info = Dense(1, activation='relu', kernel_initializer='uniform')\n",
     "classifier.add(layer_info)\n",
     "\n",
     "# Adding output layer\n",
-    "layer_info = Dense(activation='sigmoid', kernel_initializer='uniform', units=1)\n",
+    "layer_info = Dense(1, activation='sigmoid', kernel_initializer='uniform')\n",
     "classifier.add(layer_info)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -120,18 +120,220 @@
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "Error when checking input: expected dense_13_input to have shape (11,) but got array with shape (2372,)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-54-bf0a3aec8a3c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# Fitting the ANN to the training set\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mclassifier\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnb_epoch\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mE:\\Anaconda\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, **kwargs)\u001b[0m\n\u001b[0;32m    953\u001b[0m             \u001b[0msample_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    954\u001b[0m             \u001b[0mclass_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mclass_weight\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 955\u001b[1;33m             batch_size=batch_size)\n\u001b[0m\u001b[0;32m    956\u001b[0m         \u001b[1;31m# Prepare validation data.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    957\u001b[0m         \u001b[0mdo_validation\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mE:\\Anaconda\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36m_standardize_user_data\u001b[1;34m(self, x, y, sample_weight, class_weight, check_array_lengths, batch_size)\u001b[0m\n\u001b[0;32m    752\u001b[0m             \u001b[0mfeed_input_shapes\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    753\u001b[0m             \u001b[0mcheck_batch_axis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;31m# Don't enforce the batch size.\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 754\u001b[1;33m             exception_prefix='input')\n\u001b[0m\u001b[0;32m    755\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    756\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0my\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mE:\\Anaconda\\lib\\site-packages\\keras\\engine\\training_utils.py\u001b[0m in \u001b[0;36mstandardize_input_data\u001b[1;34m(data, names, shapes, check_batch_axis, exception_prefix)\u001b[0m\n\u001b[0;32m    134\u001b[0m                             \u001b[1;34m': expected '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mnames\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' to have shape '\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    135\u001b[0m                             \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' but got array with shape '\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 136\u001b[1;33m                             str(data_shape))\n\u001b[0m\u001b[0;32m    137\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    138\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Error when checking input: expected dense_13_input to have shape (11,) but got array with shape (2372,)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100\n",
+      "4166/4166 [==============================] - 1s 333us/step - loss: 0.6932 - acc: 0.4892\n",
+      "Epoch 2/100\n",
+      "4166/4166 [==============================] - 0s 83us/step - loss: 0.6932 - acc: 0.4911\n",
+      "Epoch 3/100\n",
+      "4166/4166 [==============================] - 0s 80us/step - loss: 0.6932 - acc: 0.4911\n",
+      "Epoch 4/100\n",
+      "4166/4166 [==============================] - 0s 82us/step - loss: 0.6932 - acc: 0.4926\n",
+      "Epoch 5/100\n",
+      "4166/4166 [==============================] - 0s 80us/step - loss: 0.6932 - acc: 0.4858\n",
+      "Epoch 6/100\n",
+      "4166/4166 [==============================] - 0s 82us/step - loss: 0.6932 - acc: 0.4926\n",
+      "Epoch 7/100\n",
+      "4166/4166 [==============================] - 0s 80us/step - loss: 0.6932 - acc: 0.4796\n",
+      "Epoch 8/100\n",
+      "4166/4166 [==============================] - 0s 82us/step - loss: 0.6932 - acc: 0.5012\n",
+      "Epoch 9/100\n",
+      "4166/4166 [==============================] - 0s 79us/step - loss: 0.6932 - acc: 0.4954\n",
+      "Epoch 10/100\n",
+      "4166/4166 [==============================] - 0s 77us/step - loss: 0.6932 - acc: 0.4902\n",
+      "Epoch 11/100\n",
+      "4166/4166 [==============================] - 0s 71us/step - loss: 0.6932 - acc: 0.4969\n",
+      "Epoch 12/100\n",
+      "4166/4166 [==============================] - 0s 78us/step - loss: 0.6932 - acc: 0.4868\n",
+      "Epoch 13/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.4902\n",
+      "Epoch 14/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.4926\n",
+      "Epoch 15/100\n",
+      "4166/4166 [==============================] - 0s 77us/step - loss: 0.6932 - acc: 0.4921\n",
+      "Epoch 16/100\n",
+      "4166/4166 [==============================] - 0s 78us/step - loss: 0.6932 - acc: 0.4959\n",
+      "Epoch 17/100\n",
+      "4166/4166 [==============================] - 0s 79us/step - loss: 0.6932 - acc: 0.4911\n",
+      "Epoch 18/100\n",
+      "4166/4166 [==============================] - 0s 78us/step - loss: 0.6932 - acc: 0.4873\n",
+      "Epoch 19/100\n",
+      "4166/4166 [==============================] - 0s 75us/step - loss: 0.6932 - acc: 0.4983\n",
+      "Epoch 20/100\n",
+      "4166/4166 [==============================] - 0s 74us/step - loss: 0.6932 - acc: 0.4906\n",
+      "Epoch 21/100\n",
+      "4166/4166 [==============================] - 0s 80us/step - loss: 0.6932 - acc: 0.4902\n",
+      "Epoch 22/100\n",
+      "4166/4166 [==============================] - 0s 74us/step - loss: 0.6932 - acc: 0.5012\n",
+      "Epoch 23/100\n",
+      "4166/4166 [==============================] - 0s 75us/step - loss: 0.6932 - acc: 0.4921\n",
+      "Epoch 24/100\n",
+      "4166/4166 [==============================] - 0s 74us/step - loss: 0.6932 - acc: 0.4978\n",
+      "Epoch 25/100\n",
+      "4166/4166 [==============================] - 0s 77us/step - loss: 0.6932 - acc: 0.4921\n",
+      "Epoch 26/100\n",
+      "4166/4166 [==============================] - 0s 79us/step - loss: 0.6932 - acc: 0.4930\n",
+      "Epoch 27/100\n",
+      "4166/4166 [==============================] - 0s 70us/step - loss: 0.6932 - acc: 0.4892\n",
+      "Epoch 28/100\n",
+      "4166/4166 [==============================] - 0s 69us/step - loss: 0.6932 - acc: 0.4858\n",
+      "Epoch 29/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.5012\n",
+      "Epoch 30/100\n",
+      "4166/4166 [==============================] - 0s 69us/step - loss: 0.6932 - acc: 0.4868\n",
+      "Epoch 31/100\n",
+      "4166/4166 [==============================] - 0s 67us/step - loss: 0.6932 - acc: 0.4935\n",
+      "Epoch 32/100\n",
+      "4166/4166 [==============================] - 0s 79us/step - loss: 0.6932 - acc: 0.4974\n",
+      "Epoch 33/100\n",
+      "4166/4166 [==============================] - 0s 69us/step - loss: 0.6932 - acc: 0.4868\n",
+      "Epoch 34/100\n",
+      "4166/4166 [==============================] - 0s 75us/step - loss: 0.6932 - acc: 0.4858\n",
+      "Epoch 35/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.4983\n",
+      "Epoch 36/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.4839\n",
+      "Epoch 37/100\n",
+      "4166/4166 [==============================] - 0s 70us/step - loss: 0.6932 - acc: 0.4791\n",
+      "Epoch 38/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.4959\n",
+      "Epoch 39/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.4911\n",
+      "Epoch 40/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.5012\n",
+      "Epoch 41/100\n",
+      "4166/4166 [==============================] - 0s 69us/step - loss: 0.6932 - acc: 0.4974\n",
+      "Epoch 42/100\n",
+      "4166/4166 [==============================] - 0s 69us/step - loss: 0.6932 - acc: 0.4930\n",
+      "Epoch 43/100\n",
+      "4166/4166 [==============================] - 0s 69us/step - loss: 0.6932 - acc: 0.5036\n",
+      "Epoch 44/100\n",
+      "4166/4166 [==============================] - 0s 71us/step - loss: 0.6932 - acc: 0.5012\n",
+      "Epoch 45/100\n",
+      "4166/4166 [==============================] - 0s 76us/step - loss: 0.6932 - acc: 0.4897\n",
+      "Epoch 46/100\n",
+      "4166/4166 [==============================] - 0s 69us/step - loss: 0.6932 - acc: 0.4998\n",
+      "Epoch 47/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.4926\n",
+      "Epoch 48/100\n",
+      "4166/4166 [==============================] - 0s 69us/step - loss: 0.6932 - acc: 0.4993\n",
+      "Epoch 49/100\n",
+      "4166/4166 [==============================] - 0s 70us/step - loss: 0.6932 - acc: 0.4988\n",
+      "Epoch 50/100\n",
+      "4166/4166 [==============================] - 0s 70us/step - loss: 0.6932 - acc: 0.4926\n",
+      "Epoch 51/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.4964\n",
+      "Epoch 52/100\n",
+      "4166/4166 [==============================] - 0s 70us/step - loss: 0.6932 - acc: 0.4926\n",
+      "Epoch 53/100\n",
+      "4166/4166 [==============================] - 0s 69us/step - loss: 0.6932 - acc: 0.5012\n",
+      "Epoch 54/100\n",
+      "4166/4166 [==============================] - 0s 69us/step - loss: 0.6932 - acc: 0.4921\n",
+      "Epoch 55/100\n",
+      "4166/4166 [==============================] - 0s 69us/step - loss: 0.6932 - acc: 0.4935\n",
+      "Epoch 56/100\n",
+      "4166/4166 [==============================] - 0s 69us/step - loss: 0.6932 - acc: 0.5002\n",
+      "Epoch 57/100\n",
+      "4166/4166 [==============================] - 0s 70us/step - loss: 0.6932 - acc: 0.4945\n",
+      "Epoch 58/100\n",
+      "4166/4166 [==============================] - 0s 70us/step - loss: 0.6932 - acc: 0.4974\n",
+      "Epoch 59/100\n",
+      "4166/4166 [==============================] - 0s 80us/step - loss: 0.6933 - acc: 0.4897\n",
+      "Epoch 60/100\n",
+      "4166/4166 [==============================] - 0s 70us/step - loss: 0.6932 - acc: 0.5012\n",
+      "Epoch 61/100\n",
+      "4166/4166 [==============================] - 0s 72us/step - loss: 0.6932 - acc: 0.5007\n",
+      "Epoch 62/100\n",
+      "4166/4166 [==============================] - 0s 70us/step - loss: 0.6932 - acc: 0.4892\n",
+      "Epoch 63/100\n",
+      "4166/4166 [==============================] - 0s 70us/step - loss: 0.6932 - acc: 0.4950\n",
+      "Epoch 64/100\n",
+      "4166/4166 [==============================] - 0s 72us/step - loss: 0.6932 - acc: 0.4911\n",
+      "Epoch 65/100\n",
+      "4166/4166 [==============================] - 0s 69us/step - loss: 0.6932 - acc: 0.5012\n",
+      "Epoch 66/100\n",
+      "4166/4166 [==============================] - 0s 70us/step - loss: 0.6932 - acc: 0.4940\n",
+      "Epoch 67/100\n",
+      "4166/4166 [==============================] - 0s 70us/step - loss: 0.6932 - acc: 0.4950\n",
+      "Epoch 68/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.5012\n",
+      "Epoch 69/100\n",
+      "4166/4166 [==============================] - 0s 69us/step - loss: 0.6932 - acc: 0.5012\n",
+      "Epoch 70/100\n",
+      "4166/4166 [==============================] - 0s 88us/step - loss: 0.6932 - acc: 0.4969\n",
+      "Epoch 71/100\n",
+      "4166/4166 [==============================] - 0s 83us/step - loss: 0.6932 - acc: 0.4954\n",
+      "Epoch 72/100\n",
+      "4166/4166 [==============================] - 0s 78us/step - loss: 0.6932 - acc: 0.4974\n",
+      "Epoch 73/100\n",
+      "4166/4166 [==============================] - 0s 83us/step - loss: 0.6932 - acc: 0.4897\n",
+      "Epoch 74/100\n",
+      "4166/4166 [==============================] - 0s 87us/step - loss: 0.6932 - acc: 0.4921\n",
+      "Epoch 75/100\n",
+      "4166/4166 [==============================] - 0s 76us/step - loss: 0.6932 - acc: 0.4930\n",
+      "Epoch 76/100\n",
+      "4166/4166 [==============================] - 0s 83us/step - loss: 0.6932 - acc: 0.4964\n",
+      "Epoch 77/100\n",
+      "4166/4166 [==============================] - 0s 73us/step - loss: 0.6932 - acc: 0.5007\n",
+      "Epoch 78/100\n",
+      "4166/4166 [==============================] - 0s 76us/step - loss: 0.6932 - acc: 0.4887\n",
+      "Epoch 79/100\n",
+      "4166/4166 [==============================] - 0s 74us/step - loss: 0.6932 - acc: 0.4964\n",
+      "Epoch 80/100\n",
+      "4166/4166 [==============================] - 0s 74us/step - loss: 0.6932 - acc: 0.5012\n",
+      "Epoch 81/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.4950\n",
+      "Epoch 82/100\n",
+      "4166/4166 [==============================] - 0s 69us/step - loss: 0.6932 - acc: 0.4940\n",
+      "Epoch 83/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.4926\n",
+      "Epoch 84/100\n",
+      "4166/4166 [==============================] - 0s 67us/step - loss: 0.6932 - acc: 0.4964\n",
+      "Epoch 85/100\n",
+      "4166/4166 [==============================] - 0s 69us/step - loss: 0.6932 - acc: 0.4911\n",
+      "Epoch 86/100\n",
+      "4166/4166 [==============================] - 0s 67us/step - loss: 0.6932 - acc: 0.4969\n",
+      "Epoch 87/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.4897\n",
+      "Epoch 88/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.5012\n",
+      "Epoch 89/100\n",
+      "4166/4166 [==============================] - 0s 67us/step - loss: 0.6932 - acc: 0.4974\n",
+      "Epoch 90/100\n",
+      "4166/4166 [==============================] - 0s 69us/step - loss: 0.6932 - acc: 0.4959\n",
+      "Epoch 91/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.5012\n",
+      "Epoch 92/100\n",
+      "4166/4166 [==============================] - 0s 69us/step - loss: 0.6932 - acc: 0.4892\n",
+      "Epoch 93/100\n",
+      "4166/4166 [==============================] - 0s 70us/step - loss: 0.6932 - acc: 0.4959\n",
+      "Epoch 94/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.4926\n",
+      "Epoch 95/100\n",
+      "4166/4166 [==============================] - 0s 67us/step - loss: 0.6932 - acc: 0.4921\n",
+      "Epoch 96/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.4954\n",
+      "Epoch 97/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.4935\n",
+      "Epoch 98/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.5012\n",
+      "Epoch 99/100\n",
+      "4166/4166 [==============================] - 0s 71us/step - loss: 0.6932 - acc: 0.4983\n",
+      "Epoch 100/100\n",
+      "4166/4166 [==============================] - 0s 68us/step - loss: 0.6932 - acc: 0.4983\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x228d531e5c0>"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -139,12 +341,12 @@
     "classifier.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
     "\n",
     "# Fitting the ANN to the training set\n",
-    "classifier.fit(X_train, y_train, batch_size=10, nb_epoch=100)"
+    "classifier.fit(X_train, y_train, batch_size=10, epochs=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,6 +357,27 @@
     "# Making the confusion Matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
     "cm = confusion_matrix(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[516,   0],\n",
+       "       [526,   0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cm"
    ]
   }
  ],
