Comments and final run of results

--- a/classification/logistic_regression.ipynb
+++ b/classification/logistic_regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Title\n",
+    "# Applying Machine Learning and Deep Learning to identify home appliances consuming excess power\n",
     "\n",
     "## Copyright (c) 2018, Faststream Technologies\n",
     "## Author: Sudhanva Narayana"
@@ -22,7 +22,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,18 +257,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Sudhanva\\Anaconda3\\envs\\tf\\lib\\site-packages\\ipykernel_launcher.py:11: DeprecationWarning: in the future out of bounds indices will raise an error instead of being ignored by `numpy.delete`.\n",
-      "  # This is added back by InteractiveShellApp.init_path()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "columns = df.columns\n",
     "dummies = []\n",
@@ -345,12 +336,9 @@
     {
      "data": {
       "text/plain": [
-       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='entropy',\n",
-       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
-       "            oob_score=False, random_state=0, verbose=0, warm_start=False)"
+       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "           metric_params=None, n_jobs=1, n_neighbors=3, p=2,\n",
+       "           weights='uniform')"
       ]
      },
      "execution_count": 9,
@@ -359,7 +347,7 @@
     }
    ],
    "source": [
-    "classifier = RandomForestClassifier(n_estimators=10, criterion='entropy', random_state=0)\n",
+    "classifier = LogisticRegression(random_state=0)\n",
     "classifier.fit(X_train, y_train)"
    ]
   },
@@ -379,7 +367,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9178187403993856\n"
+      "0.6513056835637481\n"
      ]
     }
    ],
@@ -405,8 +393,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[619  35]\n",
-      " [ 72 576]]\n"
+      "[[420 234]\n",
+      " [220 428]]\n"
      ]
     }
    ],
@@ -425,10 +413,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.90      0.95      0.92       654\n",
-      "          1       0.94      0.89      0.92       648\n",
+      "          0       0.66      0.64      0.65       654\n",
+      "          1       0.65      0.66      0.65       648\n",
       "\n",
-      "avg / total       0.92      0.92      0.92      1302\n",
+      "avg / total       0.65      0.65      0.65      1302\n",
       "\n"
      ]
     }
