--- a/main/experiment/trial.ipynb
+++ b/main/experiment/trial.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,6 @@
        "      <th>time</th>\n",
        "      <th>no_of_people</th>\n",
        "      <th>time_stayed_mins</th>\n",
-       "      <th>power</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -79,92 +78,87 @@
        "      <td>AC</td>\n",
        "      <td>1</td>\n",
        "      <td>101</td>\n",
-       "      <td>cold</td>\n",
-       "      <td>2018-01-03</td>\n",
-       "      <td>13:00:00</td>\n",
+       "      <td>very hot</td>\n",
+       "      <td>2018-01-02</td>\n",
        "      <td>14:00:00</td>\n",
+       "      <td>15:00:00</td>\n",
        "      <td>afternoon</td>\n",
-       "      <td>6</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1919</td>\n",
+       "      <td>7</td>\n",
+       "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Heater</td>\n",
+       "      <td>AC</td>\n",
        "      <td>1</td>\n",
        "      <td>101</td>\n",
-       "      <td>cold</td>\n",
-       "      <td>2018-01-18</td>\n",
-       "      <td>10:00:00</td>\n",
-       "      <td>11:00:00</td>\n",
-       "      <td>morning</td>\n",
-       "      <td>4</td>\n",
-       "      <td>24</td>\n",
-       "      <td>2593</td>\n",
+       "      <td>very hot</td>\n",
+       "      <td>2018-01-03</td>\n",
+       "      <td>01:00:00</td>\n",
+       "      <td>02:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>11</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Heater</td>\n",
+       "      <td>AC</td>\n",
        "      <td>1</td>\n",
        "      <td>101</td>\n",
-       "      <td>cold</td>\n",
-       "      <td>2018-01-22</td>\n",
-       "      <td>18:00:00</td>\n",
-       "      <td>19:00:00</td>\n",
-       "      <td>evening</td>\n",
+       "      <td>very hot</td>\n",
+       "      <td>2018-01-03</td>\n",
+       "      <td>02:00:00</td>\n",
+       "      <td>03:00:00</td>\n",
+       "      <td>midnight</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>2054</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Heater</td>\n",
+       "      <td>AC</td>\n",
        "      <td>1</td>\n",
        "      <td>101</td>\n",
-       "      <td>cold</td>\n",
-       "      <td>2018-01-22</td>\n",
-       "      <td>19:00:00</td>\n",
-       "      <td>20:00:00</td>\n",
-       "      <td>night</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2969</td>\n",
+       "      <td>very hot</td>\n",
+       "      <td>2018-01-03</td>\n",
+       "      <td>11:00:00</td>\n",
+       "      <td>12:00:00</td>\n",
+       "      <td>morning</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Refridgerator</td>\n",
+       "      <td>AC</td>\n",
        "      <td>1</td>\n",
        "      <td>101</td>\n",
-       "      <td>cold</td>\n",
-       "      <td>2018-01-17</td>\n",
-       "      <td>08:00:00</td>\n",
-       "      <td>09:00:00</td>\n",
-       "      <td>morning</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>206</td>\n",
+       "      <td>very hot</td>\n",
+       "      <td>2018-01-03</td>\n",
+       "      <td>18:00:00</td>\n",
+       "      <td>19:00:00</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>2</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          device  building  room weather_type        date from_time   to_time  \\\n",
-       "0             AC         1   101         cold  2018-01-03  13:00:00  14:00:00   \n",
-       "1         Heater         1   101         cold  2018-01-18  10:00:00  11:00:00   \n",
-       "2         Heater         1   101         cold  2018-01-22  18:00:00  19:00:00   \n",
-       "3         Heater         1   101         cold  2018-01-22  19:00:00  20:00:00   \n",
-       "4  Refridgerator         1   101         cold  2018-01-17  08:00:00  09:00:00   \n",
+       "  device  building  room weather_type        date from_time   to_time  \\\n",
+       "0     AC         1   101     very hot  2018-01-02  14:00:00  15:00:00   \n",
+       "1     AC         1   101     very hot  2018-01-03  01:00:00  02:00:00   \n",
+       "2     AC         1   101     very hot  2018-01-03  02:00:00  03:00:00   \n",
+       "3     AC         1   101     very hot  2018-01-03  11:00:00  12:00:00   \n",
+       "4     AC         1   101     very hot  2018-01-03  18:00:00  19:00:00   \n",
        "\n",
-       "        time  no_of_people  time_stayed_mins  power  \n",
-       "0  afternoon             6                20   1919  \n",
-       "1    morning             4                24   2593  \n",
-       "2    evening             0                 0   2054  \n",
-       "3      night             3                 1   2969  \n",
-       "4    morning             0                 0    206  "
+       "        time  no_of_people  time_stayed_mins  \n",
+       "0  afternoon             7                27  \n",
+       "1   midnight            11                32  \n",
+       "2   midnight             0                 0  \n",
+       "3    morning             7                 4  \n",
+       "4    evening             2                17  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
