New dataset generation for both test and train, new models created

--- a/main/experiment/trial.ipynb
+++ b/main/experiment/trial.ipynb
@@ -76,92 +76,92 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>AC</td>\n",
+       "      <td>Lights</td>\n",
        "      <td>1</td>\n",
        "      <td>101</td>\n",
-       "      <td>very hot</td>\n",
-       "      <td>2018-01-02</td>\n",
-       "      <td>14:00:00</td>\n",
-       "      <td>15:00:00</td>\n",
-       "      <td>afternoon</td>\n",
-       "      <td>7</td>\n",
-       "      <td>27</td>\n",
-       "      <td>1497.122353</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101</td>\n",
-       "      <td>very hot</td>\n",
-       "      <td>2018-01-03</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-05</td>\n",
        "      <td>01:00:00</td>\n",
        "      <td>02:00:00</td>\n",
        "      <td>midnight</td>\n",
        "      <td>11</td>\n",
-       "      <td>32</td>\n",
-       "      <td>1418.397340</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1496.960792</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lights</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-05</td>\n",
+       "      <td>01:00:00</td>\n",
+       "      <td>02:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>4</td>\n",
+       "      <td>44</td>\n",
+       "      <td>1514.745402</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>AC</td>\n",
+       "      <td>Lights</td>\n",
        "      <td>1</td>\n",
        "      <td>101</td>\n",
-       "      <td>very hot</td>\n",
-       "      <td>2018-01-03</td>\n",
-       "      <td>02:00:00</td>\n",
-       "      <td>03:00:00</td>\n",
-       "      <td>midnight</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1472.697586</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-05</td>\n",
+       "      <td>06:00:00</td>\n",
+       "      <td>07:00:00</td>\n",
+       "      <td>early morning</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1482.252783</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>AC</td>\n",
+       "      <td>Lights</td>\n",
        "      <td>1</td>\n",
        "      <td>101</td>\n",
-       "      <td>very hot</td>\n",
-       "      <td>2018-01-03</td>\n",
-       "      <td>11:00:00</td>\n",
-       "      <td>12:00:00</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-05</td>\n",
+       "      <td>07:00:00</td>\n",
+       "      <td>08:00:00</td>\n",
        "      <td>morning</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1455.343591</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1544.158696</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>AC</td>\n",
+       "      <td>Lights</td>\n",
        "      <td>1</td>\n",
        "      <td>101</td>\n",
-       "      <td>very hot</td>\n",
-       "      <td>2018-01-03</td>\n",
-       "      <td>18:00:00</td>\n",
-       "      <td>19:00:00</td>\n",
-       "      <td>evening</td>\n",
-       "      <td>2</td>\n",
-       "      <td>17</td>\n",
-       "      <td>1505.829679</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-05</td>\n",
+       "      <td>07:00:00</td>\n",
+       "      <td>08:00:00</td>\n",
+       "      <td>morning</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1548.307563</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  device  building  room weather_type        date from_time   to_time  \\\n",
-       "0     AC         1   101     very hot  2018-01-02  14:00:00  15:00:00   \n",
-       "1     AC         1   101     very hot  2018-01-03  01:00:00  02:00:00   \n",
-       "2     AC         1   101     very hot  2018-01-03  02:00:00  03:00:00   \n",
-       "3     AC         1   101     very hot  2018-01-03  11:00:00  12:00:00   \n",
-       "4     AC         1   101     very hot  2018-01-03  18:00:00  19:00:00   \n",
+       "   device  building  room weather_type        date from_time   to_time  \\\n",
+       "0  Lights         1   101          hot  2018-01-05  01:00:00  02:00:00   \n",
+       "1  Lights         1   101          hot  2018-01-05  01:00:00  02:00:00   \n",
+       "2  Lights         1   101          hot  2018-01-05  06:00:00  07:00:00   \n",
+       "3  Lights         1   101          hot  2018-01-05  07:00:00  08:00:00   \n",
+       "4  Lights         1   101          hot  2018-01-05  07:00:00  08:00:00   \n",
        "\n",
-       "        time  no_of_people  time_stayed_mins        power  \n",
-       "0  afternoon             7                27  1497.122353  \n",
-       "1   midnight            11                32  1418.397340  \n",
-       "2   midnight             0                 0  1472.697586  \n",
-       "3    morning             7                 4  1455.343591  \n",
-       "4    evening             2                17  1505.829679  "
+       "            time  no_of_people  time_stayed_mins        power  \n",
+       "0       midnight            11                11  1496.960792  \n",
+       "1       midnight             4                44  1514.745402  \n",
+       "2  early morning             7                 3  1482.252783  \n",
+       "3        morning             2                13  1544.158696  \n",
+       "4        morning             1                27  1548.307563  "
       ]
      },
      "execution_count": 3,
@@ -305,31 +305,31 @@
        "      <th>0</th>\n",
        "      <td>2018-01-01</td>\n",
        "      <td>00:00:00</td>\n",
-       "      <td>9556</td>\n",
+       "      <td>10372</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2018-01-01</td>\n",
        "      <td>01:00:00</td>\n",
-       "      <td>8512</td>\n",
+       "      <td>9393</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2018-01-01</td>\n",
        "      <td>02:00:00</td>\n",
-       "      <td>10947</td>\n",
+       "      <td>10013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2018-01-01</td>\n",
        "      <td>03:00:00</td>\n",
-       "      <td>12376</td>\n",
+       "      <td>10171</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2018-01-01</td>\n",
        "      <td>04:00:00</td>\n",
-       "      <td>10260</td>\n",
+       "      <td>10650</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -337,11 +337,11 @@
       ],
       "text/plain": [
        "         date from_time  power\n",
-       "0  2018-01-01  00:00:00   9556\n",
-       "1  2018-01-01  01:00:00   8512\n",
-       "2  2018-01-01  02:00:00  10947\n",
-       "3  2018-01-01  03:00:00  12376\n",
-       "4  2018-01-01  04:00:00  10260"
+       "0  2018-01-01  00:00:00  10372\n",
+       "1  2018-01-01  01:00:00   9393\n",
+       "2  2018-01-01  02:00:00  10013\n",
+       "3  2018-01-01  03:00:00  10171\n",
+       "4  2018-01-01  04:00:00  10650"
       ]
      },
      "execution_count": 5,
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,18 +395,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_df_priorities = sample_df.merge(df_home_priority, on=['device', 'weather_type', 'time'])\n",
-    "\n",
-    "sample_df_priorities = sample_df_priorities[['device', 'building', 'room', 'no_of_people', 'time_stayed_mins', 'order']]"
+    "sample_df_priorities = sample_df.merge(df_home_priority, on=['device', 'weather_type', 'time'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -433,8 +431,15 @@
        "      <th>device</th>\n",
        "      <th>building</th>\n",
        "      <th>room</th>\n",
+       "      <th>weather_type</th>\n",
+       "      <th>date</th>\n",
+       "      <th>from_time</th>\n",
+       "      <th>to_time</th>\n",
+       "      <th>time</th>\n",
        "      <th>no_of_people</th>\n",
        "      <th>time_stayed_mins</th>\n",
+       "      <th>power</th>\n",
+       "      <th>priority</th>\n",
        "      <th>order</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -443,63 +448,112 @@
        "      <th>0</th>\n",
        "      <td>AC</td>\n",
        "      <td>1</td>\n",
-       "      <td>105</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16</td>\n",
+       "      <td>106</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>20:00:00</td>\n",
+       "      <td>21:00:00</td>\n",
+       "      <td>night</td>\n",
+       "      <td>6</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1448.693116</td>\n",
+       "      <td>4</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>AC</td>\n",
-       "      <td>7</td>\n",
-       "      <td>704</td>\n",
+       "      <td>1</td>\n",
+       "      <td>106</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>20:00:00</td>\n",
+       "      <td>21:00:00</td>\n",
+       "      <td>night</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1437.647515</td>\n",
        "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>16</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>AC</td>\n",
-       "      <td>7</td>\n",
-       "      <td>704</td>\n",
-       "      <td>11</td>\n",
-       "      <td>35</td>\n",
-       "      <td>16</td>\n",
+       "      <td>3</td>\n",
+       "      <td>306</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>20:00:00</td>\n",
+       "      <td>21:00:00</td>\n",
+       "      <td>night</td>\n",
+       "      <td>13</td>\n",
+       "      <td>56</td>\n",
+       "      <td>1443.378302</td>\n",
+       "      <td>4</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>AC</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1003</td>\n",
+       "      <td>3</td>\n",
+       "      <td>306</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>20:00:00</td>\n",
+       "      <td>21:00:00</td>\n",
+       "      <td>night</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>16</td>\n",
+       "      <td>1456.093962</td>\n",
+       "      <td>4</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>AC</td>\n",
+       "      <td>7</td>\n",
+       "      <td>706</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>20:00:00</td>\n",
+       "      <td>21:00:00</td>\n",
+       "      <td>night</td>\n",
+       "      <td>9</td>\n",
        "      <td>3</td>\n",
-       "      <td>302</td>\n",
-       "      <td>14</td>\n",
-       "      <td>23</td>\n",
-       "      <td>99</td>\n",
+       "      <td>1441.095882</td>\n",
+       "      <td>4</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>AC</td>\n",
+       "      <td>2</td>\n",
+       "      <td>206</td>\n",
+       "      <td>low cold</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>20:00:00</td>\n",
+       "      <td>21:00:00</td>\n",
+       "      <td>night</td>\n",
        "      <td>4</td>\n",
-       "      <td>404</td>\n",
-       "      <td>13</td>\n",
-       "      <td>41</td>\n",
-       "      <td>99</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1455.085741</td>\n",
+       "      <td>8</td>\n",
+       "      <td>51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>AC</td>\n",
-       "      <td>9</td>\n",
-       "      <td>905</td>\n",
-       "      <td>4</td>\n",
-       "      <td>35</td>\n",
+       "      <td>8</td>\n",
+       "      <td>806</td>\n",
+       "      <td>low hot</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>20:00:00</td>\n",
+       "      <td>21:00:00</td>\n",
+       "      <td>night</td>\n",
+       "      <td>6</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1449.039500</td>\n",
+       "      <td>6</td>\n",
        "      <td>40</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -507,17 +561,26 @@
        "</div>"
       ],
       "text/plain": [
-       "  device  building  room  no_of_people  time_stayed_mins  order\n",
-       "0     AC         1   105             0                 0     16\n",
-       "1     AC         7   704             4                 8     16\n",
-       "2     AC         7   704            11                35     16\n",
-       "3     AC        10  1003             0                 0     16\n",
-       "4     AC         3   302            14                23     99\n",
-       "5     AC         4   404            13                41     99\n",
-       "6     AC         9   905             4                35     40"
+       "  device  building  room weather_type        date from_time   to_time   time  \\\n",
+       "0     AC         1   106          hot  2018-01-01  20:00:00  21:00:00  night   \n",
+       "1     AC         1   106          hot  2018-01-01  20:00:00  21:00:00  night   \n",
+       "2     AC         3   306          hot  2018-01-01  20:00:00  21:00:00  night   \n",
+       "3     AC         3   306          hot  2018-01-01  20:00:00  21:00:00  night   \n",
+       "4     AC         7   706          hot  2018-01-01  20:00:00  21:00:00  night   \n",
+       "5     AC         2   206     low cold  2018-01-01  20:00:00  21:00:00  night   \n",
+       "6     AC         8   806      low hot  2018-01-01  20:00:00  21:00:00  night   \n",
+       "\n",
+       "   no_of_people  time_stayed_mins        power  priority  order  \n",
+       "0             6                17  1448.693116         4     28  \n",
+       "1            11                 3  1437.647515         4     28  \n",
+       "2            13                56  1443.378302         4     28  \n",
+       "3             0                 0  1456.093962         4     28  \n",
+       "4             9                 3  1441.095882         4     28  \n",
+       "5             4                34  1455.085741         8     51  \n",
+       "6             6                19  1449.039500         6     40  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
